--- a/Exercicio Aula04.html
+++ b/Exercicio Aula04.html
@@ -106,7 +106,7 @@
   log(filhos.length);
 
   //ex5
-  let primeiraFilhos = primeiraSection.children[0];
+  let primeiraFilhos = primeiraSection.children[1];
   let sectionFilho = primeiraFilhos.children[0];
   let botaoFilho = sectionFilho.children[0];
   botaoFilho.textcontent = "Clique Aqui";
@@ -121,7 +121,7 @@
    let paiOrigem = botaoOrigem.parentElement;
    let avoOrigem = paiOrigem.parentElement;
    adotar = terceiraSection.appendChild(avoOrigem);
-   log(adotar);
+   log(terceiraSection);
  </script>
 </body>
 </html>
