--- a/Exercicio Aula04.html
+++ b/Exercicio Aula04.html
@@ -117,7 +117,7 @@
    log(adotar);
    */
    //oq eu acho que vc quis dizer =>
-   let botaoOrigem = document.querySelector("button")[1];
+   let botaoOrigem = document.querySelectorAll("button")[1];
    let paiOrigem = botaoOrigem.parentElement;
    let avoOrigem = paiOrigem.parentElement;
    adotar = terceiraSection.appendChild(avoOrigem);
