--- a/Exercicio Aula04.html
+++ b/Exercicio Aula04.html
@@ -118,10 +118,8 @@
    log(adotar);
    */
    //oq eu acho que vc quis dizer =>
-   let botaoOrigem = document.querySelectorAll("button")[0];
-   let paiOrigem = botaoOrigem.parentElement;
-   let avoOrigem = paiOrigem.parentElement;
-   adotar = terceiraSection.appendChild(avoOrigem);
+   let avoBotao = paiBotao.parentElement;
+   let adotar = terceiraSection.appendChild(avoBotao);
    log(terceiraSection);
  </script>
 </body>
