--- a/Exercicio Aula04.html
+++ b/Exercicio Aula04.html
@@ -109,8 +109,7 @@
   let primeiraFilhos = primeiraSection.children[1];
   let sectionFilho = primeiraFilhos.children[0];
   let botaoFilho = sectionFilho.children[0];
-  const texto = "Clique Aqui";
-  botaoFilho.textcontent = texto;
+  botaoFilho.textcontent = "Clique Aqui";
 
    //ex6
    let botaoOrigem = document.querySelectorAll("button")[1];
@@ -122,9 +121,7 @@
    //ex7
    let irmaPrimeiraSection = primeiraSection.nextElementSibling.nextElementSibling;
    let criarP = document.createElement('p');
-   const paragrafo = "Cheguei do primeiro irmão!";
-   criarP.textcontent = paragrafo;
-
+   criarP.textcontent = "Cheguei do primeiro irmão!";
    //ex8
    
    
